# browser-ai-integrations

./: .gitignore  .prettierignore  AGENTS.md  README.md  build.bat  build.sh  package-lock.json  package.json  start.sh
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  TESTING_CHECKLIST.md
backend-rig/: Cargo.toml
backend-rig/src/: main.rs  models.rs
backend-rig/src/dtos/: agent.rs
backend-rig/src/handler/: mod.rs
backend-rig/tests/: integration_tests.rs
backend/src/: ai.rs  config.rs  error.rs  main.rs  privacy.rs  routes.rs  state.rs  ws.rs
backend/src/dtos/: agent.rs  mod.rs
backend/src/handler/: agent_handler.rs
backend/src/llm/: provider.rs
backend/src/models/: chat.rs  mod.rs  ws.rs
backend/src/tools/: mod.rs  websocket.rs
backend/src/utils/: streaming.rs
backend/tests/: agent_context_test.rs  integration_tests.rs
docs/: testing-notes.md
extension/: background.js  content.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  sidepanel.html  sidepanel.js
extension/__tests__/: snapshot.test.js
extension/lib/: auto-render.min.js  highlight.min.js  katex.min.js  marked.min.js  purify.min.js
extension/utils/: stream.js
tests/extension/: actions.test.js  example.test.js  jest.config.js  snapshot.test.js
