[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
urlencoding = "2.1"
