[package]
name = "backend-rig"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.29.0"
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
